Fixed gap in logo reel

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -400,7 +400,7 @@ main {
   .logo-carousel {
     height: 6rem;
     overflow: hidden;
-    width: 126rem;
+    width: 120rem;
     position: relative;
     margin: 0 auto;
 
